--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,51 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:paddingLeft="@dimen/activity_horizontal_margin"
-  android:paddingRight="@dimen/activity_horizontal_margin"
-  android:paddingTop="@dimen/activity_vertical_margin"
   android:paddingBottom="@dimen/activity_vertical_margin"
+  android:orientation="vertical"
   app:layout_behavior="@string/appbar_scrolling_view_behavior"
-  tools:showIn="@layout/activity_main"
-  tools:context=".MainActivity">
-
-  <GridLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true"
-    android:layout_marginBottom="63dp">
-
+  tools:showIn="@layout/activity_main">
     <TextView
-      android:layout_width="351dp"
-      android:layout_height="221dp"
-      android:textAppearance="?android:attr/textAppearanceLarge"
-      android:text="ShyNotes"
-      android:id="@+id/publicNote"
-      android:layout_row="0"
-      android:layout_column="4"
-      android:layout_rowSpan="3"
-      android:autoText="false"
-      android:textAlignment="center"
-      android:textSize="45sp"
-      android:elegantTextHeight="false"
-      android:singleLine="false"
-      android:layout_gravity="top|center_vertical"
-      android:background="#33B5E5"
-      android:paddingTop="63dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="18dp"
+        android:textAlignment="center"
+        android:text="@string/edit_message"
+        android:textSize="18pt"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:orientation="horizontal">
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/edit_message"
+            android:hint="@string/edit_message"
+            android:layout_weight="1"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_send"
+            android:background="@color/colorPrimary"
+            android:textColor="#FFF"
+            android:textSize="9pt"/>
+    </LinearLayout>
 
-    <AutoCompleteTextView
-      android:layout_width="match_parent"
-      android:layout_height="54dp"
-      android:text="New AutoCompleteTextView"
-      android:id="@+id/autoCompleteTextView"
-      android:layout_row="7"
-      android:layout_column="4"/>
-
-  </GridLayout>
-</RelativeLayout>
+</LinearLayout>
