--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,25 +14,28 @@
         android:layout_height="wrap_content"
         android:layout_margin="18dp"
         android:textAlignment="center"
-        android:text="@string/edit_message"
-        android:textSize="18pt"/>
+        android:text=""
+        android:textSize="18pt"
+        android:id="@+id/publicBox"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:orientation="horizontal">
-        <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+
+        <EditText android:layout_width="0dp"
+                   android:layout_height="wrap_content"
             android:id="@+id/edit_message"
-            android:hint="@string/edit_message"
-            android:layout_weight="1"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/button_send"
-            android:background="@color/colorPrimary"
-            android:textColor="#FFF"
-            android:textSize="9pt"/>
+            android:hint="@string/edit_message" android:layout_weight="1"
+            />
+        <!--<Button-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/button_send"-->
+            <!--android:background="@color/colorPrimary"-->
+            <!--android:textColor="#FFF"-->
+            <!--android:textSize="9pt"-->
+            <!--android:onClick="showMessage"/>-->
     </LinearLayout>
 
 </LinearLayout>
